'滚轮内容区'

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
-
-html,body/*{height: 100%;overflow: hidden;}*/
-html,body,h1,h2,h3,h4,h5,h6,p,ul,li{margin: 0px;padding: 0px;font: 14px "微软雅黑";}
+html,body{height: 100%;overflow: hidden;}
+html,body,h1,h2,h3,h4,h5,h6,p,ul,li{margin: 0;padding: 0;font: 14px "微软雅黑";}
 a{text-decoration: none;display: block;}
 li{list-style: none;}
 img{display: block;}
@@ -8,99 +7,113 @@ img{display: block;}
 /*清除浮动*/
 .clearfix{*zoom: 1;}
 .clearfix:after{content: "";display: block;clear: both;}
-#wrap{
-    /*position: relative;*/
-    height: 100%;
 
+/*公共样式*/
+.common-title{
+    color:#009ee0;
+    font-size:80px;
+    line-height:0.8;
+    font-weight:bold;
+    letter-spacing:-5px;
+}
+
+
+/*头部样式*/
+/*
+  选择器是从右往左解析，这样效率更高
+  选择器有开销的，不同选择器开销不同
+    id选择器<类选择器
+  结论：选择器一般最多3-4个左右
+*/
+#wrap{
+    position: relative;
+    height: 100%;
 }
 .header{
-   position: relative;
-
+    position: relative;
 }
-.header-main {
-  width: 1100px;
-  height: 80px;
-  margin: 0 auto;
-  background: yellow;
+.header-main{
+    width: 1100px;
+    height: 80px;
+    margin: 0 auto;
 }
 .logo{
-  float: left;
+    float: left;
     margin-top: 15px;
 }
- .music-iocn{
-   float: left;
-     margin-top: 50px;
+.music-icon{
+    float: left;
+    margin-top: 50px;
 }
- .nav{
-   float: right;
-     margin-top: 50px;
- }
+.nav{
+    float: right;
+    margin-top: 50px;
+}
 .nav li{
-   position: relative;
+    position: relative;
     float: left;
     margin-left: 40px;
     cursor: pointer;
-   }
+}
 .nav li:hover .down{
     width: 100%;
-
 }
 .nav li .up{
     color: #009EE0;
 }
-
 .nav li .down{
     position: absolute;
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     width: 0;
-    overflow: hidden;
     transition: width 1s;
-
+    overflow: hidden;
 }
-/*小箭头*/
-.arrows{
+.arrow{
     position: absolute;
-    left:50%;
+    left: 50%;
     bottom: -11px;
+    z-index: 10;
     width: 21px;
     height: 11px;
-    transition: left 1s;
-    background-image: url("../img/arrow.png");
+    background-image: url('../img/arrow.png');
     background-repeat: no-repeat;
-    z-index: 10;
+    transition: left 1s;
 }
 
+/*内容区*/
 .content{
     position: absolute;
-    top:80px;
+    top: 80px;
     bottom: 0;
-    left:0;
+    left: 0;
     right: 0;
-
+    overflow: hidden;
 }
-
 .content-main{
-
+    position: absolute;
+    left: 0;
+    top: 0;  /*为了让第一次有过渡效果*/
     height: 500%;
+    width: 100%;
+    transition: top 1s;
 
 }
-
 .content-main>li{
-
+    position: relative;
     height: 20%;
-    background: pink;
-}
+    background: red;
 
+}
 .content-main section{
     position: absolute;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     margin-top: -260px;
     margin-left: -550px;
     width: 1100px;
     height: 520px;
-    background: red;
+    background: pink;
 }
 
 
